added name on footer

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
     </main>
     <footer>
         <div class="container">
-            <p>&copy; 2025 Miwagnan's Restaurant. All rights reserved.</p>
+            <p>&copy; 2025 Miwagnan's Restaurant. All rights reserved. Maniwang, John Paul</p>
         </div>
     </footer>
 </body>
